[package]
name = "pg-pool"
version = "0.6.1"
edition.workspace = true
authors.workspace = true

[dependencies]
deadpool = "0.10"
deadpool-postgres = "0.12"
log = "0.4"
once_cell = "1.19"
server-conf = { path = "../server-conf" }
tokio-postgres = { version = "0.7" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
