[package]
name = "pg-pool"
version = "0.7.3"
edition.workspace = true
authors.workspace = true

[dependencies]
deadpool-postgres = "0.13"
log = "0.4"
once_cell = "1.19"
server-conf = { path = "../server-conf" }
tokio-postgres = { version = "0.7" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
